fix(demo): change trading demo full screen z-index lower than ms-select

--- a/src/app/examples/grid-trading.component.scss
+++ b/src/app/examples/grid-trading.component.scss
@@ -11,7 +11,7 @@ $sparkline-color: #00b78d;
   bottom: 0;
   padding: 10px 12px 0 10px;
   background-color: white;
-  z-index: 8000;
+  z-index: 1040;
   position: fixed;
 }
 .changed-gain {
